modal overlapping fix

--- a/css/product.css
+++ b/css/product.css
@@ -3,12 +3,12 @@
   padding: 0;
   box-sizing: border-box
 }
-.show{
+.open{
   width: 100%;
   height: 400px;
-  z-index: 999999;
+  z-index: 999;
 }
-#show-img { width: 400px; height: 400px; }
+#open-img { width: 400px; height: 400px; }
 
 .small-img{
   width: 100%;
@@ -47,13 +47,13 @@
   width: 800%;
   position: relative;
 }
-.small-container .show-small-img{
+.small-container .open-small-img{
   width: 3%;
   height: 70px;
   margin-right: 6px;
   cursor: pointer;
   float: left;
 }
-.small-container .show-small-img:last-of-type{
+.small-container .open-small-img:last-of-type{
   margin-right: 0;
 }
